multiple minor enhancements

--- a/.tf-header.md
+++ b/.tf-header.md
@@ -1,5 +1,15 @@
-# Title
+# Host TileServer on AWS
 
-![License](https://img.shields.io/github/license/terrablocks/REPO_NAME?style=for-the-badge) ![Plan](https://img.shields.io/github/actions/workflow/status/terrablocks/REPO_NAME/tf-plan.yml?branch=main&label=Plan&style=for-the-badge) ![Checkov](https://img.shields.io/github/actions/workflow/status/terrablocks/REPO_NAME/checkov.yml?branch=main&label=Checkov&style=for-the-badge) ![Commit](https://img.shields.io/github/last-commit/terrablocks/REPO_NAME?style=for-the-badge) ![Release](https://img.shields.io/github/v/release/terrablocks/REPO_NAME?style=for-the-badge)
+![License](https://img.shields.io/github/license/terrablocks/tileserver-on-aws?style=for-the-badge) ![Plan](https://img.shields.io/github/actions/workflow/status/terrablocks/tileserver-on-aws/tf-plan.yml?branch=main&label=Plan&style=for-the-badge) ![Checkov](https://img.shields.io/github/actions/workflow/status/terrablocks/tileserver-on-aws/checkov.yml?branch=main&label=Checkov&style=for-the-badge) ![Commit](https://img.shields.io/github/last-commit/terrablocks/tileserver-on-aws?style=for-the-badge) ![Release](https://img.shields.io/github/v/release/terrablocks/tileserver-on-aws?style=for-the-badge)
 
-This terraform module will deploy the following services:
+This terraform module manages the following services:
+- CloudFront
+- WAF
+- CloudFront Function
+- HTTP API Gateway
+- Lambda Authorizer
+- VPC Private Link
+- Cloud Map
+- ECS
+- S3
+- EFS
