update tf-plan workflow

--- a/.tf-header.md
+++ b/.tf-header.md
@@ -6,6 +6,7 @@ This terraform module manages the following services:
 - CloudFront
 - WAF
 - CloudFront Function
+- ACM
 - HTTP API Gateway
 - Lambda Authorizer
 - VPC Private Link
