add arch diagram

--- a/.tf-header.md
+++ b/.tf-header.md
@@ -14,3 +14,7 @@ This terraform module manages the following services:
 - ECS
 - S3
 - EFS
+
+## Architecture Diagram
+
+![Architecture Diagram](diagram/tileserver.jpg)
