update tf header file

--- a/.tf-header.md
+++ b/.tf-header.md
@@ -18,3 +18,12 @@ This terraform module manages the following services:
 ## Architecture Diagram
 
 ![Architecture Diagram](diagram/tileserver.jpg)
+
+
+## TileServer Container Images
+
+- [maptiler/tileserver-gl-light](https://hub.docker.com/r/maptiler/tileserver-gl-light)
+- [maptiler/tileserver-gl](https://hub.docker.com/r/maptiler/tileserver-gl)
+- To build from source or customise the image, visit the [git repo](https://github.com/maptiler/tileserver-gl)
+
+This module uses `maptiler/tileserver-gl-light` by default which does not provide server-side rasterization of vector tiles, so if that's your requirement use `maptiler/tileserver-gl` image.
